feat: Implement inactivity notification system and refactor code structure
- Implement comprehensive inactivity notification system with 2-hour timer
- Add user activity tracking (MESSAGE_SENT, MESSAGE_READ, CHAT_OPENED)
- Add scheduled processing for automatic pet messages
- Refactor API controller structure with proper package organization
- Replace direct object instantiation with static factory methods
- Update static factory method names to follow of/from naming convention
- Remove try-catch blocks from service layer for cleaner exception handling
- Add proper domain models and repositories for activity tracking

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>